# zero-2-prod

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  note.md  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230424154958_create_subscriptions_table.sql  20230510010317_add_status_to_subscriptions.sql  20230510011813_make_status_not_null_in_subscriptions.sql  20230510012841_create_subscription_tokens_table.sql  20230514171932_create_users_table.sql  20230515034336_rename_password_column.sql  20230515073843_add_salt_to_users.sql  20230515090219_remove_salt_from_users.sql  20230519090429_seed_user.sql  20230524120505_create_idempotency_table.sql  20230524184159_relax_null_checks_on_idempotency.sql  20230525171922_create_newsletter_issues_table.sql  20230525174116_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/auth/: authentication.rs  credentials.rs  middleware.rs  mod.rs
src/constant/: biz_const.rs  mod.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/error/: business_error.rs  mod.rs  store_token_error.rs  subscribe_error.rs
src/idempotency/: key.rs  persistence.rs
src/request/: body_data.rs  change_password_data.rs  confirm_data.rs  error_data.rs  form_data.rs  login_data.rs  mod.rs  newsletter_data.rs  subscribe_data.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  newsletter.html  post.rs
src/routes/admin/password/: change_password.html  get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: login.html  login.rs  login_form.rs  mod.rs
src/util/: mod.rs  redirect_util.rs  string_util.rs
src/utils/: error_util.rs  mod.rs  response_util.rs  session_util.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
