[package]
name = "zero-2-prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero-2-prod"

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
# reqwest = "0.11"
fake = "~2.3" # generate fake email
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.9" # finds URLs and email addresses in plain text

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.13", default-features = false, features = ["yaml"]}
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
# env_logger = "0.10"
# log = "0.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3" # replace env_logger
tracing-log = "0.1" # print actix-web's log
once_cell = "1" # initialize once
secrecy = { version = "0.8", features = ["serde"] }  # secure tracing
tracing-actix-web = "0.7" # generate unified request_id
serde-aux = "4"
unicode-segmentation = "1"
claims = "0.7" # assert
validator = "0.16" # validate email
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
rand = { version = "0.8", features = ["std_rng"] } # generate token
thiserror = "1" # error handling: generate From template code
anyhow = "1" # error handling
base64 = "0.21"
# sha3 = "0.9" # encrypt password
argon2 = { version = "0.5", features = ["std"] } # encrypt password